<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_version">0.1</string>
    <string name="home">Home</string>
    <string name="about">Über</string>
    <string name="about_text">Diese App wurde im Rahmen des \"Energy Harvesting Design Wettbewerbs\" von Oliver Fröhling,
        Paul Thiele und Maximilian Mühlbauer entwickelt.</string>
    <string name="hp_button">Homepage</string>
    <string name="help">Hilfe</string>
    <string name="first_run">Erster Start</string>
    <string name="first_run_text">Klicken Sie auf "Gerät hinzufügen". Hier können sie die Einstellungen für das Gerät
        (Name, Beschreibung und Bluetoothgerät) festlegen.</string>
    <string name="device_options">Geräteoptionen</string>
    <string name="device_options_text">Klicken Sie lang auf den Eintrag für das Gerät, um dieses zu löschen oder die Einstellungen
        zu ändern.</string>
    <string name="device_control_options">Gerätesteuerung</string>
    <string name="device_control_options_text">Wenn sie kurz auf den Eintrag eines Gerätes klicken,
        können sie im darauf folgenden Dialogfenster zwischen den Steuerungsoptionen für das Gerät wählen. Zur Zeit ist nur \"Lagesensor\"
        implementiert.</string>
    <string name="sensor_text">Hier können sie über das Menü Bluetooth aktivieren und deaktivieren, die Bluetoothverbindung herstellen,
        die Steuerung beenden sowie zu den Einstellungnen wechseln.</string>
    <string name="known_bugs">Bekannte Fehler</string>
    <string name="known_bugs_text">Bei Geräten, die mit Android-Versionen vor Android 3 ausgestattet sind, wird der Status der
        Bluetoothverbindung nicht korrekt angezeigt.</string>
    
    
    
    <string name="since">Seit</string>
    <string name="running">läuft</string>
    <string name="add_device">Gerät hinzufügen</string>
    <string name="no_notification">Activity nicht über Notification aufgerufen!</string>
    <string name="rad">rad</string>
    <string name="delete">Löschen</string>
    <string name="really_delete_device">Sind sie sicher, dass sie das Gerät aus der Liste entfernen wollen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="enable_BT">Bluetooth aktivieren</string>
    <string name="disable_BT">Bluetooth deaktivieren</string>
    <string name="dismiss_changes">Mögliche Änderungen verwerfen?</string>
    <string name="loading">Lade&#8230;</string>
    <string name="reload_bluetooth">Bluetooth-Geräte neu laden</string>
    <string name="scanning_for_bt_devices">BT-Suche</string>
    <string name="no_bt_devices">Keine Bluetoothgeräte</string>
    <string name="bt_disabled">Bluetooth deaktiviert</string>
    <string name="connected">Verbunden</string>
    <string name="not_connected">Nicht verbunden</string>
    <string name="connect_BT">Bluetooth verbinden</string>
    <string name="no_valid_bt_device">Kein gültiges Bluetoothgerät angegeben:</string>
    <string name="no_bt_devices_desc">Es wurden keine Bluetoothgeräte gefunden</string>
    <string name="no_bt_device_selected">Kein Bluetoothgerät</string>
    <string name="no_bt_device_selected_desc">Kein BT-Gerät ausgewählt</string>
    <string name="no_bt">Bluetooth nicht aktiviert.</string>
    <string name="select_bluetooth_device">BT-Gerät auswählen</string>
    <string name="no_bt_support">Gerät unterstützt Bluetooth nicht</string>
    <string name="change_mode">Modus wechseln</string>
    <string name="stop_service">Steuerung beenden</string>
    <string name="save">Speichern</string>
    <string name="edit">Bearbeite</string>
    <string name="new_device">Neues Gerät</string>
    <string name="nocontextmenu">Kein Kontext-Menü!</string>
    <string name="reset_values">Einstellungen zurücksetzen</string>
    <string name="device_name">Gerätename</string>
    <string name="device_description">Beschreibung des Gerätes</string>
    <string name="controlON">Gerät wird gesteuert</string>
    <string name="controlOFF">Keine Steuerung</string>
    <string name="screen_alwaysON">Bildschirm immer an</string>
    <string name="screen_goOFF">Bildschirm automatisch aus</string>
    <string name="app_name">Intcar Controller</string>
    <string name="sensor">Lagesensor</string>
    <string name="draw">Zeichnen</string>
    <string name="send">Senden</string>
    <string name="sensor_orientation">Lagesensor</string>
    <string name="azimuth">Winkel zur Nordrichtung:</string>
    <string name="pitch">Pitch:</string>
    <string name="roll">Roll:</string>
    <string name="car">Auto</string>
    <string name="goaway">Geh mir aus dem Sichtfeld!</string>
    <string name="thanks">Danke.</string>
    <string name="speed">Geschwindigkeit:</string>
    <string name="steering">Lenkung:</string>
    <string name="settings">Einstellungen</string>
    <string name="general_settings">Grundlegende Einstellungen</string>
    <string name="fortyfive_angle">Grundstellung 45°</string>
    <string name="fortyfive_angle_summary">Als Grundstellung 45° angekippt</string>
    <string name="speed_slope">Multiplikator für Geschwindigkeit</string>
    <string name="speed_slope_summary">Steigung der Funktion für die Geschwindigkeit anpassen</string>
    <string name="invert_speed">Fahrtrichtung umkehren</string>
    <string name="invert_speed_summary">Den Wert für die Geschwindigkeit umkehren</string>
    <string name="steering_slope">Multiplikator für Lenkung</string>
    <string name="steering_slope_summary">Steigung der Funktion für die Lenkung anpassen</string>
    <string name="invert_steering">Lenkrichtung umkehren</string>
    <string name="invert_steering_summary">Den Wert für die Lenkrichtung umkehren</string>
    <string name="max_speed">Maximaler Wert für die Geschwindigkeit</string>
    <string name="max_speed_summary"></string>
    <string name="min_speed">Minimaler Wert für die Geschwindigkeit</string>
    <string name="min_speed_summary"></string>
    <string name="max_steering">Maximaler Wert für die Lenkung</string>
    <string name="max_steering_summary"></string>
    <string name="min_steering">Minimaler Wert für die Lenkung</string>
    <string name="min_steering_summary"></string>
    <string name="dead_angle_steering">Toter Winkel bei der Lenkung</string>
    <string name="dead_angle_steering_summary"></string>
    <string name="dead_angle_speed">Toter Winkel für Geschwindigkeit</string>
    <string name="dead_angle_speed_summary"></string>
    <string name="use_precise">Verwende genauere Steuerung</string>
    <string name="use_precise_summary">Achtung! Diese Option funktioniert noch nicht.</string>
</resources>
