<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_run"
            android:textColor="@color/lightblue"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_run_text" />
        
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_options"
            android:textColor="@color/lightblue"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_options_text" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_control_options"
            android:textColor="@color/lightblue"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_control_options_text" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor"
            android:textColor="@color/lightblue"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_text" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/known_bugs"
            android:textColor="@color/lightblue"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/known_bugs_text" />
    </LinearLayout>
</ScrollView>